# perflib

./: .gitignore  README.md  configure.ac
example/: main.c
python/: Makefile.am  setup.py  test.py
python/perflib/: libperf.cc  libperf.hh  perflib.cc
src/: Makefile.am  libperf.c  libperf.cc  libperf.h  libperf.hh  main.cc
src/.deps/: libperf.Plo  libperf.Po
